src/objects/Accounting_Rule_Line__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Rule_Header__c</fullName>
        <label>Accounting Rule Header</label>
        <referenceTo>Accounting_Rule_Header__c</referenceTo>
        <relationshipLabel>Accounting Rule Lines</relationshipLabel>
        <relationshipName>Accounting_Rule_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actual Savings Interest Expensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Bounce Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Deposit Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Withdrawal Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Accrued And Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Accrued Not Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Unsuspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Accrued And Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Accrued Not Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Accrued Not Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest On Overdue Accrued And Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest On Overdue Accrued Not Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest On Overdue Unsuspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest On Total Overdue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Unsuspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Loss Provision Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue Penalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Amount Not Yet Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Not Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Remaining</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Accounting Rule Lines</relationshipLabel>
        <relationshipName>Accounting_Rule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Accounting Rule Lines (Credit Account)</relationshipLabel>
        <relationshipName>Accounting_Rule_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Subledger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the credit account needs to store sub-ledger.</description>
        <inlineHelpText>Indicates if the credit account needs to store sub-ledger.</inlineHelpText>
        <label>Credit Subledger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Accounting Rule Lines</relationshipLabel>
        <relationshipName>Accounting_Rule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debit_Subledger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the debit account needs to store sub-ledger.</description>
        <inlineHelpText>Indicates if the debit account needs to store sub-ledger.</inlineHelpText>
        <label>Debit Subledger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Accounting Rule Lines</relationshipLabel>
        <relationshipName>Accounting_Rule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting Rule Line</label>
    <nameField>
        <displayFormat>ARLID-{00000}</displayFormat>
        <label>Accounting Rule Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Rule Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>